Обновлены стили,  разметка и добавлен новый файл

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,28 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root{
+  /*цвета*/
+  --text-color: #DB00FF;
+  --accent-color:#FF0070;
+  --article__title-color: #FF0070;
+  --article__subtitle: #000028;
+  --article__text: #F1B2CE;
+  --article__title-color: #FF0070;
+  --accent-color-decorated: #FF0070;
+   /*шрифты*/
+  --font-family: IBM Plex Mono, sans-serif;
+   /*жирность шрифта*/
+  --main-font-weight:700;
+  --font-weight:400;
+   /*размеры шрифтов*/
+   --line-height-main:130%;
+   --font-size: 1.125rem;
+  /*внутренние и внешние отступы*/
+  /*отступы при ширине 768 и 1024*/
+   --main-margin:60px 20px 60px 20px;
+  /*фоновое изображение*/
+  --bg-images:url('../images/cover-image-dark.png');
+}
+ 
+
