--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,13 +4,32 @@
   переключая тему
 */
 
+
 :root.theme-dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+   --bg-color:#000000;
+   
+  
 }
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+ background-color:var(--bg-color) ;
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
