--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,75 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-images:url('../images/cover-image-light.png');
+  --text__title-color: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --text-shadow: 4px 4px 0 var(--accent-color);
+  --article__text:#353430;
+  --article__title-color: #353430;
+  --text-color:#353430;
+  --accent-color-decorated:#353430;
+  --text-shadow-footer:#FF0070;
 }
-
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
 }
+.theme-light .header__title{
+  color: var(--text__title-color, #FFC2E6);
+  text-shadow: 4px 4px 0 var(--accent-color,#FF8DCB);
+}
+.theme-light .decorated-zone{
+  color: var(--accent-color,#FF8DCB);
+}
+.theme-light .content{
+  color: var(--article__text-color);
+}
+.theme-light .footer__title{
+  color: var(--text__title-color);
+  text-shadow: 2px 2px 0 var(--text-shadow-footer, #FF0070);
+}
+.theme-light .header__theme-menu-button{
+  color: var(--text-color,#353430);
+}
+.theme-light .decorative-rec{
+  display: none;
+}
+.decorated-zone::before,
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+}
+.decorated-zone::before {
+ top: 1.9%;
+ right: 2%; 
+ border-top: 1px solid #f7f6f2;
+ border-right: 1px solid #f7f6f2;
+ border-top: 1px solid var(--accent-color-decorated,#353430);
+ border-right: 1px solid var(--accent-color-decorated,#353430);
+}
+.decorated-zone::after {
+ bottom: -1%;
+ left: 1.9%; 
+ border-bottom: 1px solid #f7f6f2 ;
+ border-left:1px solid #f7f6f2;
+ border-bottom: 1px solid var(--accent-color-decorated,#353430);
+ border-left: 1px solid var(--accent-color-decorated,#353430);
+}
+.theme-light .header__theme-menu-button_type_dark{
+  border: 1px solid  var( --accent-color-decorated);
+  padding: 2px 14px 5px 14px;
+}
+.theme-light .header__theme-menu-button_type_light::before{
+  display: none;
+}
+.theme-light .header__theme-menu-button_type_dark{
+  border: none;
+}
+.theme-light .header__theme-menu-button_type_light{
+  border: 1px solid  var( --accent-color-decorated, #353430);
+  padding: 3px 13px 3px 13px;
+}
+
+
