--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,415 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-image: var(--bg-images,url('../images/cover-image-dark.png'));
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; 
+  background-attachment: fixed;
 }
+body{
+  font-family: var(--font-family, IBM Plex Mono, sans-serif);
+}
+/*стили для шапки*/
+.header{
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
+  justify-items: center;
+  min-height: 668px;
+}
+.decorated-zone::before,
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+}
+.decorated-zone::before{
+ top: 6%;
+ right: 2%;
+ border-top: 1px solid #f7f6f2;
+ border-right: 1px solid #f7f6f2;
+ border-top: 1px solid var(--accent-color,#FF0070);
+ border-right: 1px solid var(--accent-color,#FF0070);
+}
+.decorated-zone::after{
+ top: 95%;
+ right: 3%;
+ border-bottom:1px solid #f7f6f2 ;
+ border-left: 1px solid #f7f6f2;
+ border-bottom: 1px solid var(--accent-color,#FF0070);
+ border-left: 1px solid var(--accent-color,#FF0070);
+}
+/*меню шапки*/
+.header__theme-menu{
+  justify-self: end;
+  padding-right: 10px;
+  margin-top: 12px;
+}
+.header__theme-menu-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+.header__theme-menu-item{
+  font-size: 1.125rem;
+  line-height: 18px;
+  font-weight: var(--font-weight,400);
+}
+.header__theme-menu-button {
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+  color:var(--accent-color,#FF0070);
+  position: relative;
+}
+.header__theme-menu-button_type_dark{
+  border: 1px solid  var( --accent-color-decorated, #FF0070);
+  padding: 2px 14px 5px 14px;
+}
+.decorative-rec{
+  color: var(--accent-color,#FF0070);
+  position: absolute;
+  top: 1.5%;
+  right: 10%;
+  justify-self: end;
+  font-size: 1.125rem;
+  line-height: 145%;
+}
+.header__theme-menu-button_type_light::before{
+  content: ""; 
+  display: block ;
+  position: absolute; 
+  color: var(--accent-color,#FF0070);
+  left: 95%;
+  bottom: 300%;
+  box-shadow: 0px 0px 4px 2px #FF0070;
+  border: 6px solid var(--accent-color,#FF0070) ;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+.decorated-zone{
+  background-image: var(--bg-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; 
+  position: relative;
+}
+/*заголовок шапки*/
+.header__title {
+  line-height: 83%;
+  padding-left: 15px;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  color: var(--text-color,#DB00FF);
+  text-shadow: 4px 4px 0 var(--accent-color,#FF0070);
+}
+/*параграф*/
+.header__paragraph {
+  margin-left: 10px;
+  margin-right: 10px;
+  font-weight:var(--main-font-weight,700) ;
+  font-size:1.125rem;
+  line-height: 130%;
+  color: #000028;
+  min-height: 117px;
+}
+/*фон параграфа*/
+.title-decor{
+  background-color:var(--accent-color,#FF0070);
+}
+/*main*/
+.content{
+  margin:  40px 10px 40px 10px;
+  font-size: var(--font-size,1.125rem);
+  line-height:var( --line-height-main,130%);
+}
+/*статьи*/
+.article{
+  display: grid;
+  margin-bottom: 50px;
+}
+.article__subtitle{
+  margin-bottom: 10px;
+}
+.article__list_distraction,
+.article__list_tips{
+  display: grid;
+  row-gap: 20px;
+}
+.section__title{
+  font-size:  1.125rem;
+  font-weight: var(--main-font-weight, 700);
+  line-height:135% ;
+  color:var(--article__title-color, #FF0070);
+  margin-bottom: 20px;
+}
+.article-type-focus h2.focus-article__subtitle{
+  margin-top: 20px;
+}
+.article__section-title-type-tips{
+  margin-bottom: 20px;
+}
+.article__subtitle{
+  font-size:1.125rem;
+  font-weight:var(--main-font-weight, 700) ;
+  line-height: 23.4px;
+  color:var(--article__subtitle,  #000028);
+}
+.article__title_subtitle{
+  font-weight: var(--font-weight, 400) ;
+}
+.article__section-title-type-tips{
+  font-size: 1.125rem;
+}
+.article__text{
+  font-weight:var(--font-weight, 400) ;
+  color:var(--article__text, #F1B2CE );
+}
+/*ссылки*/
+.article__link{
+  text-shadow: 2px 1px 0 var(--accent-color,#FF0070);
+}
+.article__link:focus {
+  outline: 1px solid var(--article__text, #F1B2CE);
+}
+.article__link:hover{
+  text-decoration: underline;
+}
+/*контейнер с изображениями*/
+.article__images_title{
+  margin-bottom: 10px;
+  margin-top: 50px;
+  font-size: 1.125rem;
+}
+.container__images{
+  display: grid;
+  gap: 10px;
+}
+.article__images_item{
+  width: 100%;
+}
+/*футер*/
+.footer{ 
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ min-height: 667px;
+}
+.footer__title{
+  font-size:7.25rem;
+  line-height: 83%;
+  color: var(--text-color);
+  text-shadow: 2px 2px 0 var(--accent-color,#FF0070);
+}
+ /* медиазапрос при ширине окна просмотра 768px */
+@media (width >= 768px) {
+  .header {
+  justify-items: start;
+  min-height: 1024px;
+}
+.decorated-zone::before,
+.decorated-zone::after {
+  width: 25px;
+  height: 25px;
+}
+.decorated-zone::before {
+ top: 2%;
+ right: 2%; 
+}
+.decorated-zone::after {
+ bottom: -1%;
+ left: 3%; 
+}
+.header__theme-menu-button_type_light::before{
+  left: 90%;
+  bottom: 870%;
+}
+.decorative-rec{
+  top: 2%;
+  right: 6%;
+  font-size:  var( --font-size, 1.125rem);
+  line-height: 25px;
+}
+.header__theme-menu{
+  padding-right: 16px;
+  margin-top: 20px;
+}
+.header__title{
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  margin: 0;
+  padding: 0;
+} 
+.header__paragraph {
+  margin-block-start: 162px;
+  width: 48%;
+  justify-self:end;
+  align-self:start;
+  margin-right: 15px;
+}
+.content {
+  margin:var(--main-margin, 60px 20px 60px 20px);
+}
+.article {
+  display: grid;
+  margin-bottom: 20px;
+}
+/*секция 1*/
+ .article-type-focus {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap:20px ;
+  row-gap: 10px;
+  margin-bottom: 80px;
+}
+.distraction-article__title{
+  max-width: 236px;
+  margin-bottom: 20px;
+}
+/*3 секция*/
+.article-type-tips {
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+  margin-top: 80px;
+}
+.article__section-title-type-tips{
+  margin-bottom: 20px;
+}
+.article__subtitle-type-tips,
+.article__text-type-tips {
+  grid-column: 2;
+}
+.article-type-tips {
+ display: grid;
+}
+.tips-article__title {
+ grid-row: 1/5;
+}
+.article__section-title-type-tips {
+ grid-column: 2;
+}
+/*контейнер с изображениями*/
+.container__images{
+ margin-top: 20px;
+ gap: 20px;
+}
+.article__images_title{
+  margin-top: 0;
+}
+.article__images_item{
+  inline-size: 100%;
+  block-size: 100%;
+  max-block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.image-landscape{
+ grid-column: 1/3;
+}
+.image-food{
+ grid-column: 3/4 ;  
+ grid-row:1/3 ;
+}
+.image-retro{
+  grid-row: 2/4 ;
+}
+.image-city{
+  grid-column: 2 /4 ;
+}
+/*футер*/
+.footer{
+  min-height: 1024px;
+}
+}
+/*медиазапрос при ширине просмотра экрана от 1014px*/
+@media (width >= 1024px) {
+.header {
+  justify-items: stretch;
+  align-items: stretch;
+  min-height: 768px;
+}
+.header__theme-menu{
+  justify-self: center; 
+  margin: 0;
+}
+ .decorative-rec{  
+  top: 2%;
+  right: 5%;
+}
+.header__theme-menu{
+  padding: 0;
+}
+.header__theme-menu-list{
+  flex-direction: row;
+  gap: 20px;
+  padding-top: 20px;
+}
+.header__theme-menu-button_type_light::before{
+  left: 1070%;
+  bottom: 30%;
+}
+.header__title{
+  padding: 0;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+}
+.header__paragraph{
+  width: 48%;
+  justify-self: end;
+  min-height: 71px;
+  margin: 0;
+  margin-right: 20px;
+  margin-top: 115px;
+  align-self: start;
+}
+.content{
+  margin: var(--main-margin);
+}
+.article__subtitle{
+  margin: 0px 0px 10px 0px;
+}
+/*1 секция*/
+.article-type-focus  {
+  column-gap:0px;
+}
+/*2 секция*/
+.article-type-distraction{
+  grid-template-columns: 1fr;
+}
+.distraction-article__title {
+  grid-column: 1 / 2;
+  max-width: 315px;
+  margin: 0;
+}
+.article__list_distraction{
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+}
+/*3 секция*/
+.tips-article__title{
+  grid-row: 1/5;
+}
+.article__section-title-type-tips{
+  grid-column: 2;
+}
+.article__subtitle-type-tips{
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+.article__subtitle-type-tips{
+  margin-top: 0;
+}
+/*футер*/
+.footer{
+  min-height: 768px;
+}
+.footer__title{
+ padding: 0;
+ margin: 0;
+ font-size: 9.6875rem;
+ line-height: 83%;
+}
+}
+
+
