--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,22 +3,27 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
-
 :root.theme-dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-   --bg-color:#000000;
-   
-  
+   --bg-color: #000028;
+   /*цвета*/
+    --text__title-color: #DB00FF;
+  --accent-color:#FF0070;
+  --article__title-color: #FF0070;
+  --article__subtitle: #000028;
+  --article__text: #F1B2CE;
+  --article__title-color: #FF0070;
+  --accent-color-decorated: #FF0070;
+  --accent-color-menu:#FF0070;
+  --decorated-zone-color: #FF0070;
+  --menu-border-color: #FF0070;
 }
-
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
  background-color:var(--bg-color) ;
-
 }
 
 
