--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 .page {
+   background-color:var(--bg-color, #000028) ; 
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   background-image: var(--bg-images,url('../images/cover-image-dark.png'));
   background-repeat: no-repeat;
@@ -18,7 +19,9 @@ body{
   align-items: center;
   justify-items: center;
   min-height: 668px;
+  /*height: 100vh;*/
 }
+/*уголки*/
 .decorated-zone::before,
 .decorated-zone::after {
   content: '';
@@ -27,48 +30,18 @@ body{
   height: 25px;
 }
 .decorated-zone::before{
- top: 6%;
- right: 2%;
- border-top: 1px solid #f7f6f2;
- border-right: 1px solid #f7f6f2;
- border-top: 1px solid var(--accent-color,#FF0070);
- border-right: 1px solid var(--accent-color,#FF0070);
+  top: 1.3%;
+  right: 3%;
+ border-top: 1px solid var(--decorated-zone-color,#FF0070);
+ border-right: 1px solid var(--decorated-zone-color,#FF0070);
 }
 .decorated-zone::after{
- top: 95%;
- right: 3%;
- border-bottom:1px solid #f7f6f2 ;
- border-left: 1px solid #f7f6f2;
- border-bottom: 1px solid var(--accent-color,#FF0070);
- border-left: 1px solid var(--accent-color,#FF0070);
+ bottom:  1.3%;
+ left: 3%;
+ border-bottom: 1px solid var(--decorated-zone-color,#FF0070);
+ border-left: 1px solid var(--decorated-zone-color,#FF0070);
 }
-/*меню шапки*/
-.header__theme-menu{
-  justify-self: end;
-  padding-right: 10px;
-  margin-top: 12px;
-}
-.header__theme-menu-list{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 15px;
-}
-.header__theme-menu-item{
-  font-size: 1.125rem;
-  line-height: 18px;
-  font-weight: var(--font-weight,400);
-}
-.header__theme-menu-button {
-  border: none;
-  background-color: rgba(255, 255, 255, 0);
-  color:var(--accent-color,#FF0070);
-  position: relative;
-}
-.header__theme-menu-button_type_dark{
-  border: 1px solid  var( --accent-color-decorated, #FF0070);
-  padding: 2px 14px 5px 14px;
-}
+/*rec и псевдоэлемент кружок*/
 .decorative-rec{
   color: var(--accent-color,#FF0070);
   position: absolute;
@@ -78,42 +51,65 @@ body{
   font-size: 1.125rem;
   line-height: 145%;
 }
-.header__theme-menu-button_type_light::before{
+.decorative-rec::before{
   content: ""; 
   display: block ;
   position: absolute; 
   color: var(--accent-color,#FF0070);
-  left: 95%;
-  bottom: 300%;
+  top:40%;
+  left: 145%;
   box-shadow: 0px 0px 4px 2px #FF0070;
   border: 6px solid var(--accent-color,#FF0070) ;
   border-radius: 50%;
   transform: translate(-50%, -50%);
 }
-.decorated-zone{
-  background-image: var(--bg-image);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover; 
+/*меню шапки*/
+.header__theme-menu{
+  justify-self: end;
+  padding-inline-end: 16px;
+  margin-block-start: 10px;
+}
+.header__theme-menu-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+.header__theme-menu-item{
+  font-size: 1.125rem;
+  line-height: 113%;
+  font-weight: var(--font-weight,400);
+}
+.header__theme-menu-item:hover{
+border: 1px solid var(--menu-border-color);
+}
+.header__theme-menu-button:focus {
+  border-bottom: 1px solid #FF0070;
+}
+.header__theme-menu-button {
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+  color:var(--accent-color-menu,#FF0070);
   position: relative;
+  cursor: pointer;
 }
 /*заголовок шапки*/
 .header__title {
   line-height: 83%;
-  padding-left: 15px;
+  padding-inline-start: 10px;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  color: var(--text-color,#DB00FF);
+  color: var(--text__title-color,#DB00FF);
   text-shadow: 4px 4px 0 var(--accent-color,#FF0070);
 }
 /*параграф*/
 .header__paragraph {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-inline-start: 10px;
+  margin-inline-end: 10px;
+  margin-block-end: 10px;
   font-weight:var(--main-font-weight,700) ;
   font-size:1.125rem;
   line-height: 130%;
   color: #000028;
-  min-height: 117px;
 }
 /*фон параграфа*/
 .title-decor{
@@ -128,40 +124,31 @@ body{
 /*статьи*/
 .article{
   display: grid;
-  margin-bottom: 50px;
+  margin-block-end: 50px;
+}
+.section__title, 
+.article__subtitle{
+  font-size:  1.125rem;
+  font-weight: var(--main-font-weight, 700);
+  line-height: 23.4px;
+  color:var(--article__title-color, #FF0070);
+}
+.article__subtitle{
+  color:var(--article__subtitle,  #000028);
 }
 .article__subtitle{
   margin-bottom: 10px;
-}
-.article__list_distraction,
-.article__list_tips{
-  display: grid;
-  row-gap: 20px;
-}
-.section__title{
-  font-size:  1.125rem;
-  font-weight: var(--main-font-weight, 700);
-  line-height:135% ;
-  color:var(--article__title-color, #FF0070);
-  margin-bottom: 20px;
-}
-.article-type-focus h2.focus-article__subtitle{
   margin-top: 20px;
 }
-.article__section-title-type-tips{
-  margin-bottom: 20px;
+.article-type-tips h3.article__section-title{
+  margin-top: 20px;
+  font-size: 1.125rem;
 }
-.article__subtitle{
-  font-size:1.125rem;
-  font-weight:var(--main-font-weight, 700) ;
-  line-height: 23.4px;
-  color:var(--article__subtitle,  #000028);
+.article__list_tips h4.article__subtitle{
+ font-weight: var(--font-weight, 400);
 }
 .article__title_subtitle{
   font-weight: var(--font-weight, 400) ;
-}
-.article__section-title-type-tips{
-  font-size: 1.125rem;
 }
 .article__text{
   font-weight:var(--font-weight, 400) ;
@@ -169,21 +156,27 @@ body{
 }
 /*ссылки*/
 .article__link{
+  text-decoration: none; 
   text-shadow: 2px 1px 0 var(--accent-color,#FF0070);
 }
 .article__link:focus {
   outline: 1px solid var(--article__text, #F1B2CE);
 }
 .article__link:hover{
-  text-decoration: underline;
+  border-bottom:1px solid #F1B2CE;
 }
 /*контейнер с изображениями*/
+.image-list {
+ margin: 0;
+ padding: 0;
+ list-style-type: none;
+}
 .article__images_title{
-  margin-bottom: 10px;
-  margin-top: 50px;
+  margin-block-end:10px;
+  margin-block-start: 50px;
   font-size: 1.125rem;
 }
-.container__images{
+.image-list{
   display: grid;
   gap: 10px;
 }
@@ -191,40 +184,53 @@ body{
   width: 100%;
 }
 /*футер*/
+
 .footer{ 
+  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 667px;
+ /*height: 100vh;*/
+}
+.footer_decorated-zone::before,
+.footer_decorated-zone::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+}
+.footer_decorated-zone::before{
+  top: 1.3%;
+  right: 3%;
+  border-top: 1px solid var(--decorated-zone-color,#FF0070);
+  border-right: 1px solid var(--decorated-zone-color,#FF0070);
+}
+.footer_decorated-zone::after{
+ bottom:  1.3%;
+ left: 3%;
+ border-bottom: 1px solid var(--decorated-zone-color,#FF0070);
+ border-left: 1px solid var(--decorated-zone-color,#FF0070);
 }
 .footer__title{
   font-size:7.25rem;
   line-height: 83%;
-  color: var(--text-color);
+  color: var(--text__title-color);
   text-shadow: 2px 2px 0 var(--accent-color,#FF0070);
 }
- /* медиазапрос при ширине окна просмотра 768px */
+/* медиазапрос при ширине окна просмотра 768px */
 @media (width >= 768px) {
-  .header {
+.header {
   justify-items: start;
   min-height: 1024px;
 }
-.decorated-zone::before,
-.decorated-zone::after {
-  width: 25px;
-  height: 25px;
-}
 .decorated-zone::before {
  top: 2%;
- right: 2%; 
+ right: 2.7%; 
 }
 .decorated-zone::after {
- bottom: -1%;
+ bottom: 2%;
  left: 3%; 
-}
-.header__theme-menu-button_type_light::before{
-  left: 90%;
-  bottom: 870%;
 }
 .decorative-rec{
   top: 2%;
@@ -232,70 +238,70 @@ body{
   font-size:  var( --font-size, 1.125rem);
   line-height: 25px;
 }
-.header__theme-menu{
-  padding-right: 16px;
-  margin-top: 20px;
+.decorative-rec::before{
+  top:45%;
 }
+.header__theme-menu{
+  padding-inline-end: 27px;
+  margin-block-start: 18px;
+}
+/*заголовок*/
 .header__title{
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   margin: 0;
   padding: 0;
 } 
+/*параграф*/
 .header__paragraph {
   margin-block-start: 162px;
-  width: 48%;
+  width: 47.3%;
   justify-self:end;
   align-self:start;
-  margin-right: 15px;
+  margin-inline-end: 20px;
 }
 .content {
   margin:var(--main-margin, 60px 20px 60px 20px);
 }
+/*статьи*/
 .article {
-  display: grid;
-  margin-bottom: 20px;
+  margin-block-end: 80px;
 }
 /*секция 1*/
- .article-type-focus {
+.article-type-focus{
   display: grid;
   grid-template-columns: 1fr 2fr;
   column-gap:20px ;
-  row-gap: 10px;
-  margin-bottom: 80px;
 }
-.distraction-article__title{
+.article-type-focus .article-block:first-child .article__subtitle {
+  margin-block-start: 0;
+}
+/*2 секция*/
+.article-type-distraction h3.section__title{
   max-width: 236px;
-  margin-bottom: 20px;
 }
 /*3 секция*/
 .article-type-tips {
   grid-template-columns: 1fr 2fr;
   gap: 20px;
-  margin-top: 80px;
-}
-.article__section-title-type-tips{
-  margin-bottom: 20px;
-}
-.article__subtitle-type-tips,
-.article__text-type-tips {
-  grid-column: 2;
-}
-.article-type-tips {
- display: grid;
-}
-.tips-article__title {
- grid-row: 1/5;
+  margin-block-start: 80px;
 }
 .article__section-title-type-tips {
- grid-column: 2;
+ font-size: 1.125rem;
+}
+.article-type-tips h3.article__section-title {
+  margin-block-start: 0;
 }
 /*контейнер с изображениями*/
-.container__images{
- margin-top: 20px;
- gap: 20px;
+.image-list{
+  grid-template-columns: repeat(3,1fr);
+  margin-block-start: 20px;
+  gap: 20px;
+}
+.image-list__item {
+  display: contents; 
 }
 .article__images_title{
-  margin-top: 0;
+  margin-block-start: 0;
 }
 .article__images_item{
   inline-size: 100%;
@@ -321,11 +327,18 @@ body{
 .footer{
   min-height: 1024px;
 }
+.footer_decorated-zone::before{
+  top: 2%;
+  right: 2.6%;
+}
+.footer_decorated-zone::after{
+ bottom:  2.2%;
+ left: 2.9%;
+}
 }
 /*медиазапрос при ширине просмотра экрана от 1014px*/
 @media (width >= 1024px) {
 .header {
-  justify-items: stretch;
   align-items: stretch;
   min-height: 768px;
 }
@@ -333,81 +346,62 @@ body{
   justify-self: center; 
   margin: 0;
 }
+.decorated-zone::before{
+  top: 3%;
+  right: 2%;
+}
+.decorated-zone::after{
+ bottom: 3%;
+ left: 2%;
+}
  .decorative-rec{  
-  top: 2%;
+  top: 2.5%;
   right: 5%;
+}
+.decorative-rec::before{
+  top:55%;
+  left: 155%;
 }
 .header__theme-menu{
   padding: 0;
 }
 .header__theme-menu-list{
   flex-direction: row;
-  gap: 20px;
-  padding-top: 20px;
-}
-.header__theme-menu-button_type_light::before{
-  left: 1070%;
-  bottom: 30%;
-}
-.header__title{
-  padding: 0;
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  gap: 25px;
+  padding-block-start: 20px;
 }
 .header__paragraph{
   width: 48%;
-  justify-self: end;
-  min-height: 71px;
-  margin: 0;
-  margin-right: 20px;
-  margin-top: 115px;
-  align-self: start;
+  margin-inline-end: 20px;
+  margin-block-start: 115px;
 }
-.content{
-  margin: var(--main-margin);
-}
-.article__subtitle{
-  margin: 0px 0px 10px 0px;
-}
-/*1 секция*/
 .article-type-focus  {
-  column-gap:0px;
-}
-/*2 секция*/
-.article-type-distraction{
-  grid-template-columns: 1fr;
-}
-.distraction-article__title {
-  grid-column: 1 / 2;
-  max-width: 315px;
-  margin: 0;
+  column-gap: 0;
 }
 .article__list_distraction{
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  margin-top: 20px;
+  column-gap: 20px;
 }
-/*3 секция*/
-.tips-article__title{
-  grid-row: 1/5;
-}
-.article__section-title-type-tips{
-  grid-column: 2;
-}
-.article__subtitle-type-tips{
-  margin-bottom: 10px;
-  margin-top: 20px;
-}
-.article__subtitle-type-tips{
-  margin-top: 0;
+.article-type-distraction h3.section__title{
+  max-width: 315px;
 }
 /*футер*/
 .footer{
   min-height: 768px;
 }
+.footer_decorated-zone::before{
+  top: 2.5%;
+  right: 2%;
+}
+.footer_decorated-zone::after{
+ bottom:  2.4%;
+ left: 2.3%;
+}
 .footer__title{
  padding: 0;
  margin: 0;
- font-size: 9.6875rem;
+ font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
  line-height: 83%;
 }
 }
