--- a/styles/dark.css
+++ b/styles/dark.css
@@ -20,6 +20,7 @@
   --accent-color-menu:#FF0070;
   --decorated-zone-color: #FF0070;
   --menu-border-color: #FF0070;
+  --article__link-color:#F1B2CE;
 }
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
