--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 .page {
-   background-color:var(--bg-color, #000028) ; 
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+   background-color:var(--bg-color, #000028) ; 
   background-image: var(--bg-images,url('../images/cover-image-dark.png'));
   background-repeat: no-repeat;
   background-position: center;
@@ -32,21 +32,21 @@ body{
 .decorated-zone::before{
   top: 1.3%;
   right: 3%;
- border-top: 1px solid var(--decorated-zone-color,#FF0070);
- border-right: 1px solid var(--decorated-zone-color,#FF0070);
+  border-top: 1px solid var(--decorated-zone-color,#FF0070);
+  border-right: 1px solid var(--decorated-zone-color,#FF0070);
 }
 .decorated-zone::after{
- bottom:  1.3%;
- left: 3%;
- border-bottom: 1px solid var(--decorated-zone-color,#FF0070);
- border-left: 1px solid var(--decorated-zone-color,#FF0070);
+  bottom:  1.3%;
+  left: 3%;
+  border-bottom: 1px solid var(--decorated-zone-color,#FF0070);
+  border-left: 1px solid var(--decorated-zone-color,#FF0070);
 }
-/*rec и псевдоэлемент кружок*/
+/*rec и псевдоэлемент*/
 .decorative-rec{
   color: var(--accent-color,#FF0070);
   position: absolute;
-  top: 1.5%;
-  right: 10%;
+  top: 1.2%;
+  right: 10.2%;
   justify-self: end;
   font-size: 1.125rem;
   line-height: 145%;
@@ -56,12 +56,27 @@ body{
   display: block ;
   position: absolute; 
   color: var(--accent-color,#FF0070);
-  top:40%;
-  left: 145%;
+  top:50%;
+  left:146%;
   box-shadow: 0px 0px 4px 2px #FF0070;
   border: 6px solid var(--accent-color,#FF0070) ;
   border-radius: 50%;
   transform: translate(-50%, -50%);
+}
+@media (min-width: 495px) {
+ .decorative-rec{
+ right: 8%;
+ }
+}
+@media (min-width: 600px) {
+ .decorative-rec{
+ right: 7%;
+ }
+}
+@media (prefers-color-scheme: light) {
+ .theme-light .decorative-rec {
+  display: none;
+  }
 }
 /*меню шапки*/
 .header__theme-menu{
@@ -80,11 +95,14 @@ body{
   line-height: 113%;
   font-weight: var(--font-weight,400);
 }
-.header__theme-menu-item:hover{
-border: 1px solid var(--menu-border-color);
+.header__theme-menu-button:hover {
+  border: 1px solid var(--menu-border-color,#FF007066);
 }
 .header__theme-menu-button:focus {
   border-bottom: 1px solid #FF0070;
+}
+.header__theme-menu-button_active{
+  border: 1px solid #FF0070;
 }
 .header__theme-menu-button {
   border: none;
@@ -140,12 +158,12 @@ border: 1px solid var(--menu-border-color);
   margin-bottom: 10px;
   margin-top: 20px;
 }
-.article-type-tips h3.article__section-title{
+.article__section-title-type-tips{
   margin-top: 20px;
   font-size: 1.125rem;
 }
-.article__list_tips h4.article__subtitle{
- font-weight: var(--font-weight, 400);
+.article__subtitle_tips{
+  font-weight: var(--font-weight, 400);
 }
 .article__title_subtitle{
   font-weight: var(--font-weight, 400) ;
@@ -163,57 +181,37 @@ border: 1px solid var(--menu-border-color);
   outline: 1px solid var(--article__text, #F1B2CE);
 }
 .article__link:hover{
-  border-bottom:1px solid #F1B2CE;
+  border-bottom:1px solid var(--article__link-color,#F1B2CE);
 }
 /*контейнер с изображениями*/
 .image-list {
- margin: 0;
- padding: 0;
- list-style-type: none;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 .article__images_title{
   margin-block-end:10px;
   margin-block-start: 50px;
   font-size: 1.125rem;
 }
-.image-list{
+.image-list {
   display: grid;
-  gap: 10px;
+  gap: 5px;
 }
 .article__images_item{
   width: 100%;
 }
 /*футер*/
-
 .footer{ 
   position: relative;
- display: flex;
- align-items: center;
- justify-content: center;
- min-height: 667px;
- height: 100vh;
-}
-.footer_decorated-zone::before,
-.footer_decorated-zone::after {
-  content: '';
-  position: absolute;
-  width: 25px;
-  height: 25px;
-}
-.footer_decorated-zone::before{
-  top: 1.3%;
-  right: 3%;
-  border-top: 1px solid var(--decorated-zone-color,#FF0070);
-  border-right: 1px solid var(--decorated-zone-color,#FF0070);
-}
-.footer_decorated-zone::after{
- bottom:  1.3%;
- left: 3%;
- border-bottom: 1px solid var(--decorated-zone-color,#FF0070);
- border-left: 1px solid var(--decorated-zone-color,#FF0070);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 668px;
+  height: 100vh;
 }
 .footer__title{
-  font-size:7.25rem;
+  font-size:clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 83%;
   color: var(--text__title-color);
   text-shadow: 2px 2px 0 var(--accent-color,#FF0070);
@@ -225,21 +223,22 @@ border: 1px solid var(--menu-border-color);
   min-height: 1024px;
 }
 .decorated-zone::before {
- top: 2%;
- right: 2.7%; 
+  top: 2%;
+  right: 2.7%; 
 }
 .decorated-zone::after {
- bottom: 2%;
- left: 3%; 
+  bottom: 2%;
+  left: 3%; 
 }
 .decorative-rec{
   top: 2%;
-  right: 6%;
-  font-size:  var( --font-size, 1.125rem);
+  right: 6.3%;
+  font-size: var(--font-size, 1.125rem);
   line-height: 25px;
 }
 .decorative-rec::before{
-  top:45%;
+  top:53%;
+  left: 146%;
 }
 .header__theme-menu{
   padding-inline-end: 27px;
@@ -272,11 +271,11 @@ border: 1px solid var(--menu-border-color);
   grid-template-columns: 1fr 2fr;
   column-gap:20px ;
 }
-.article-type-focus .article-block:first-child .article__subtitle {
+.article__subtitle-focus {
   margin-block-start: 0;
 }
 /*2 секция*/
-.article-type-distraction h3.section__title{
+.section__title-type-distraction{
   max-width: 236px;
 }
 /*3 секция*/
@@ -284,9 +283,6 @@ border: 1px solid var(--menu-border-color);
   grid-template-columns: 1fr 2fr;
   gap: 20px;
   margin-block-start: 80px;
-}
-.article__section-title-type-tips {
- font-size: 1.125rem;
 }
 .article-type-tips h3.article__section-title {
   margin-block-start: 0;
@@ -311,11 +307,11 @@ border: 1px solid var(--menu-border-color);
   object-position: center;
 }
 .image-landscape{
- grid-column: 1/3;
+  grid-column: 1/3;
 }
 .image-food{
- grid-column: 3/4 ;  
- grid-row:1/3 ;
+  grid-column: 3/4 ;  
+  grid-row:1/3 ;
 }
 .image-retro{
   grid-row: 2/4 ;
@@ -327,13 +323,8 @@ border: 1px solid var(--menu-border-color);
 .footer{
   min-height: 1024px;
 }
-.footer_decorated-zone::before{
-  top: 2%;
-  right: 2.6%;
-}
-.footer_decorated-zone::after{
- bottom:  2.2%;
- left: 2.9%;
+.footer__title{
+ font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
 }
 }
 /*медиазапрос при ширине просмотра экрана от 1014px*/
@@ -347,20 +338,20 @@ border: 1px solid var(--menu-border-color);
   margin: 0;
 }
 .decorated-zone::before{
-  top: 3%;
+  top: 2.7%;
   right: 2%;
 }
 .decorated-zone::after{
- bottom: 3%;
- left: 2%;
+  bottom: 3%;
+  left: 2%;
 }
- .decorative-rec{  
+.decorative-rec{  
   top: 2.5%;
-  right: 5%;
+  right: 4.7%;
 }
 .decorative-rec::before{
-  top:55%;
-  left: 155%;
+  top:50%;
+  left: 146%;
 }
 .header__theme-menu{
   padding: 0;
@@ -383,20 +374,12 @@ border: 1px solid var(--menu-border-color);
   grid-template-columns: repeat(3, 1fr);
   column-gap: 20px;
 }
-.article-type-distraction h3.section__title{
+.section__title-type-distraction{
   max-width: 315px;
 }
 /*футер*/
 .footer{
   min-height: 768px;
-}
-.footer_decorated-zone::before{
-  top: 2.5%;
-  right: 2%;
-}
-.footer_decorated-zone::after{
- bottom:  2.4%;
- left: 2.3%;
 }
 .footer__title{
  padding: 0;
@@ -405,5 +388,3 @@ border: 1px solid var(--menu-border-color);
  line-height: 83%;
 }
 }
-
-
