--- a/styles/variables.css
+++ b/styles/variables.css
@@ -13,7 +13,8 @@
   --accent-color-decorated: #FF0070;
   --accent-color-menu:#FF0070;
   --decorated-zone-color: #FF0070;
-  --menu-border-color: #FF0070;
+  --menu-border-color: #FF007066;
+  --article__link-color:#F1B2CE;
    /*шрифты*/
   --font-family: 'IBM Plex Mono', monospace;
    /*жирность шрифта*/
