--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,6 +15,7 @@
   --decorated-zone-color: #FF0070;
   --menu-border-color: #FF007066;
   --article__link-color:#F1B2CE;
+  --border-color-active: #FF0070;
    /*шрифты*/
   --font-family: 'IBM Plex Mono', monospace;
    /*жирность шрифта*/
