--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
-   background-color:var(--bg-color, #000028) ; 
+  background-color:var(--bg-color, #000028) ; 
   background-image: var(--bg-images,url('../images/cover-image-dark.png'));
   background-repeat: no-repeat;
   background-position: center;
@@ -95,21 +95,21 @@ body{
   line-height: 113%;
   font-weight: var(--font-weight,400);
 }
-.header__theme-menu-button:hover {
-  border: 1px solid var(--menu-border-color,#FF007066);
-}
-.header__theme-menu-button:focus {
-  border-bottom: 1px solid #FF0070;
-}
-.header__theme-menu-button_active{
-  border: 1px solid #FF0070;
-}
 .header__theme-menu-button {
   border: none;
   background-color: rgba(255, 255, 255, 0);
   color:var(--accent-color-menu,#FF0070);
   position: relative;
   cursor: pointer;
+}
+.header__theme-menu-button:hover {
+  border: 1px solid var(--menu-border-color,#FF007066);
+}
+.header__theme-menu-button:focus {
+  border-bottom: 1px solid #FF0070;
+}
+.header__theme-menu-button_active:active{
+  border: 1px solid var(--border-color-active);
 }
 /*заголовок шапки*/
 .header__title {
@@ -174,14 +174,14 @@ body{
 }
 /*ссылки*/
 .article__link{
-  text-decoration: none; 
-  text-shadow: 2px 1px 0 var(--accent-color,#FF0070);
+text-decoration: none;
+text-shadow: 2px 1px 0 var(--accent-color,#FF0070);
 }
 .article__link:focus {
-  outline: 1px solid var(--article__text, #F1B2CE);
+outline: 1px solid var(--article__link-color, #F1B2CE);
 }
 .article__link:hover{
-  border-bottom:1px solid var(--article__link-color,#F1B2CE);
+border-bottom:1px solid var(--article__link-color,#F1B2CE);
 }
 /*контейнер с изображениями*/
 .image-list {
