--- a/styles/dark.css
+++ b/styles/dark.css
@@ -24,7 +24,23 @@
   --article__link-color:#F1B2CE;
 }
 }
+  
 
+:root.theme-dark {
+   --bg-color: #000028;
+   /*цвета*/
+  --text__title-color: #DB00FF;
+  --accent-color:#FF0070;
+  --article__title-color: #FF0070;
+  --article__subtitle: #000028;
+  --article__text: #F1B2CE;
+  --article__title-color: #FF0070;
+  --accent-color-decorated: #FF0070;
+  --accent-color-menu:#FF0070;
+  --decorated-zone-color: #FF0070;
+  --menu-border-color: #FF0070;
+  --article__link-color:#F1B2CE;
+}
 
 
 
