--- a/styles/light.css
+++ b/styles/light.css
@@ -29,3 +29,27 @@
   
 }
 }
+
+@media (prefers-color-scheme: light) {
+ .theme-light .decorative-rec {
+  display: none;
+  }
+}
+
+:root.theme-light {
+  --bg-images:url('../images/cover-image-light.png');
+  --bg-color: #fff1f7;
+  --text__title-color: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --text-shadow: 4px 4px 0 var(--accent-color);
+  --article__text:#353430;
+  --article__title-color: #353430;
+  --text-color:#353430;
+  --accent-color-decorated:#353430;
+  --text-shadow-footer:#FF0070;
+  --accent-color-menu:#353430;
+  --decorated-zone-color:#353430;
+  --menu-border-color: #353430 ;
+  --article__link-color: #353430;
+  --border-color-active:#353430;
+}
